update to v0.0.18, update BRs

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  pytest_examples-0.0.17.tar.gz: 143850a322d528007c248a9ada4b71068fa4d9c6
+  python-pytest-examples-0.0.18.tar.gz: 979930f4a4a554d7962c32549f1d754aa23e2d20
